--- a/chatgpt_test/src/pages/components/Chat/chat.module.css
+++ b/chatgpt_test/src/pages/components/Chat/chat.module.css
@@ -1,10 +1,6 @@
-.container {
-  width: 100%;
-  padding: 15px;
-}
+.section {
+  padding: 25px;
 
-.chat_container {
-  flex: 1;
   width: 100%;
   height: 100%;
   overflow-y: scroll;
@@ -18,6 +14,12 @@
 
   padding-bottom: 20px;
   scroll-behavior: smooth;
+}
+.chat_container {
+  flex-basis: 90%;
+}
+.container {
+  width: 100%;
 }
 
 .message {
