--- a/chatgpt_test/src/styles/globals.css
+++ b/chatgpt_test/src/styles/globals.css
@@ -1,8 +1,26 @@
+* {
+  box-sizing: border-box;
+  position: relative;
+}
+html,
 body {
-  font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", "Helvetica",
-    "Arial", sans-serif;
-  padding: 0;
-
+  font-family: "微軟正黑體", arial;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
   margin: 0;
-  height: 100%;
+}
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  color: #333;
 }
